Replaced Hardcoded text.

--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -42,11 +42,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/recipe_text_view_margin"
                 android:padding="@dimen/recipe_text_view_padding"
-                android:text="Recipe Name"
+                android:text="@string/recipe_name_sample"
                 android:textAppearance="?attr/textAppearanceHeadline4"
-                app:layout_constraintTop_toTopOf="@+id/recipe_nested_constraint_layout"
                 app:layout_constraintLeft_toLeftOf="@+id/recipe_nested_constraint_layout"
-                />
+                app:layout_constraintTop_toTopOf="@+id/recipe_nested_constraint_layout" />
 <!--            Rating icon-->
             <ImageView
                 android:id="@+id/img_rating_up"
@@ -54,22 +53,21 @@
                 android:layout_height="24dp"
                 android:layout_marginLeft="@dimen/recipe_button_view_margin"
                 android:padding="@dimen/recipe_text_view_padding"
-                android:src="@drawable/ic_thumb_up_primary_24dp"
+                app:srcCompat="@drawable/ic_thumb_up_primary_24dp"
                 app:layout_constraintTop_toBottomOf="@+id/txt_recipe_name"
                 app:layout_constraintLeft_toLeftOf="@id/recipe_nested_constraint_layout"
                 app:layout_constraintRight_toLeftOf="@+id/txt_recipe_rating"
-                />
+                android:layout_marginStart="@dimen/recipe_button_view_margin" />
     <!--        Rating Text view-->
             <TextView
                 android:id="@+id/txt_recipe_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/recipe_text_view_padding"
-                android:text="95% would make it again"
+                android:text="@string/recipe_rating_sample"
                 android:textAppearance="?attr/textAppearanceBody2"
-                app:layout_constraintTop_toBottomOf="@+id/txt_recipe_name"
                 app:layout_constraintLeft_toRightOf="@+id/img_rating_up"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/txt_recipe_name" />
 <!--            Ready time icon-->
             <ImageView
                 android:id="@+id/img_ready_time"
@@ -77,7 +75,7 @@
                 android:layout_height="24dp"
                 android:layout_marginLeft="@dimen/recipe_button_view_margin"
                 android:padding="@dimen/recipe_text_view_padding"
-                android:src="@drawable/ic_access_alarm_black_24dp"
+                app:srcCompat="@drawable/ic_access_alarm_black_24dp"
                 app:layout_constraintTop_toBottomOf="@+id/txt_recipe_rating"
                 app:layout_constraintLeft_toLeftOf="@id/recipe_nested_constraint_layout"
                 app:layout_constraintRight_toLeftOf="@+id/txt_recipe_ready_time"
@@ -88,11 +86,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/recipe_text_view_padding"
-                android:text="Ready in under 30 minutes"
+                android:text="@string/recipe_time_sample"
                 android:textAppearance="?attr/textAppearanceBody2"
-                app:layout_constraintTop_toBottomOf="@+id/txt_recipe_rating"
                 app:layout_constraintLeft_toRightOf="@+id/img_ready_time"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/txt_recipe_rating" />
 <!--            Recipe Video-->
             <VideoView
                 android:id="@+id/recipe_video_view"
@@ -110,11 +107,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/recipe_text_view_margin"
                 android:padding="@dimen/recipe_text_view_padding"
-                android:text="Ingredients"
+                android:text="@string/recipe_ingredients_title"
                 android:textAppearance="?attr/textAppearanceHeadline6"
-                app:layout_constraintTop_toBottomOf="@+id/recipe_video_view"
                 app:layout_constraintLeft_toLeftOf="@+id/recipe_nested_constraint_layout"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/recipe_video_view" />
 <!--            Ingredient Subtitle-->
             <TextView
                 android:id="@+id/txt_recipe_ingredient_subtitle"
@@ -122,11 +118,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/recipe_text_view_margin"
                 android:paddingLeft="@dimen/recipe_text_view_padding"
-                android:text="for 3 servings"
+                android:text="@string/recipe_serving_sample"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
-                app:layout_constraintTop_toBottomOf="@+id/txt_recipe_ingredient"
                 app:layout_constraintLeft_toLeftOf="@+id/recipe_nested_constraint_layout"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/txt_recipe_ingredient" />
 <!--            Ingredient lists-->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_ingredinets"
@@ -144,25 +139,23 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/recipe_text_view_margin"
                 android:padding="@dimen/recipe_text_view_padding"
-                android:text="Nutrition Info"
+                android:text="@string/recipe_nutrition_title"
                 android:textAppearance="?attr/textAppearanceHeadline6"
-                app:layout_constraintTop_toBottomOf="@+id/list_ingredinets"
                 app:layout_constraintLeft_toLeftOf="@+id/recipe_nested_constraint_layout"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/list_ingredinets" />
 <!--            Hide/View Info -->
             <com.google.android.material.chip.Chip
                 android:id="@+id/btn_hide_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/recipe_text_view_margin"
                 android:layout_marginTop="12dp"
-                app:chipEndPadding="0dp"
-                android:text="Hide Info -"
+                android:layout_marginRight="@dimen/recipe_text_view_margin"
+                android:text="@string/recipe_nutrition_hide"
                 android:textAppearance="@style/TextAppearance.RecipeThem.Chip"
                 app:chipBackgroundColor="@color/colorWhite"
-                app:layout_constraintTop_toBottomOf="@+id/list_ingredinets"
+                app:chipEndPadding="0dp"
                 app:layout_constraintRight_toRightOf="@+id/recipe_nested_constraint_layout"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/list_ingredinets" />
 <!--            List Nutrition Info-->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_nutrition"
@@ -177,17 +170,16 @@
 <!--            Export Ingredient List Button-->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_export_nutrition"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/recipe_button_view_margin"
-                android:text="Export ingredient list"
+                android:text="@string/recipe_export_btn"
                 android:textAppearance="@style/TextAppearance.RecipeTheme.Button"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 app:cornerRadius="4dp"
-                app:strokeColor="@color/colorPrimaryDark"
-                app:layout_constraintTop_toBottomOf="@+id/list_nutrition"
                 app:layout_constraintLeft_toLeftOf="@+id/recipe_nested_constraint_layout"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/list_nutrition"
+                app:strokeColor="@color/colorPrimaryDark" />
 <!--            User Comment Section-->
 <!--            User Image-->
             <ImageView
@@ -272,13 +264,12 @@
                 android:layout_marginLeft="@dimen/recipe_text_view_margin"
                 android:layout_marginTop="@dimen/recipe_text_view_margin"
                 android:padding="@dimen/recipe_text_view_padding"
-                android:text="RELATED RECIPES"
+                android:text="@string/recipe_related"
                 android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:textColor="@color/colorAccent"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/btn_rating"
                 app:layout_constraintLeft_toLeftOf="@id/recipe_nested_constraint_layout"
-                />
+                app:layout_constraintTop_toBottomOf="@id/btn_rating" />
 <!--            Related recipe list-->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_related_recipe"
