--- a/app/src/main/res/layout/dialog_forgot_password.xml
+++ b/app/src/main/res/layout/dialog_forgot_password.xml
@@ -11,56 +11,52 @@
         android:id="@+id/txt_forgot_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:padding="@dimen/recipe_text_view_padding"
+        android:text="@string/fp_title"
+        android:textAppearance="?attr/textAppearanceHeadline5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="10dp"
-        android:padding="@dimen/recipe_text_view_padding"
-        android:text="Forgot Password"
-        android:textAppearance="?attr/textAppearanceHeadline5"
-        android:gravity="center"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 <!--    Edit text to enter email address-->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edit_text_forgot_email_layout"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:hint="Enter Email Address"
-        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_title"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_margin="10dp"
-        app:startIconDrawable="@drawable/ic_email_black_24dp"
-        >
+        android:hint="@string/fp_hint"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_title"
+        app:startIconDrawable="@drawable/ic_email_black_24dp">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_forgot_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?attr/textAppearanceBody1"
-            />
+            android:textAppearance="?attr/textAppearanceBody1" />
     </com.google.android.material.textfield.TextInputLayout>
 <!--    Add description-->
     <TextView
         android:id="@+id/txt_forgot_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Link to reset password will be sent to this Email address."
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:text="@string/fp_message"
         android:textAppearance="?attr/textAppearanceSubtitle1"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_forgot_email_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:gravity="center"
-        android:layout_margin="10dp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_forgot_email_layout" />
 <!--    send button-->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_forgot"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Reset Password"
-        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_desc"
+        android:layout_margin="10dp"
+        android:text="@string/fp_btn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="10dp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_desc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
