--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:background="?android:attr/windowBackground"
-        app:itemBackground="@drawable/splash_background"
+        app:itemBackground="@color/colorPrimaryDark"
         app:itemIconTint="@color/splashScreen"
         app:itemTextColor="@color/splashScreen"
         app:layout_constraintBottom_toBottomOf="parent"
