--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -14,6 +14,7 @@
         android:layout_width="@dimen/list_item_width"
         android:layout_height="@dimen/list_item_height"
         android:layout_marginBottom="4dp"
+        android:contentDescription="@string/recipe_image_description"
         />
     <TextView
         android:id="@+id/txt_recipe_item"
