--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#3D424A</color>
+    <color name="colorPrimaryDark">#57BEE6</color>
     <color name="colorAccent">#D81B60</color>
     <color name="splashScreen">#FFFFFF</color>
     <color name="colorImgBackground">#FFFFFF</color>
