--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <!-- Meal prep text -->
         <TextView
             android:id="@+id/txt_title_name_signup"
             android:layout_width="wrap_content"
@@ -79,6 +80,7 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- email input box -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/ip_layout_email"
             android:layout_width="match_parent"
@@ -105,6 +107,7 @@
                 android:scrollHorizontally="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!--  password input box -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/ip_layout_password_signup"
             android:layout_width="match_parent"
@@ -125,7 +128,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="2dp"
-                android:fontFamily="casual"
                 android:hint="@string/password"
                 android:textAppearance="?attr/textAppearanceBody1"
                 android:inputType="textPassword"
