--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -76,7 +76,7 @@
         <ImageView
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:srcCompat="@drawable/ic_local_phone_black_24dp"
+            android:src="@drawable/ic_local_phone_black_24dp"
             ></ImageView>
 
         <TextView
